--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+*.pyc
+*.sh
+setup.cfg
+pywebview.egg-info
+MANIFEST
+build
+dist
+.cache
+.idea
+.vs
+bin
+obj
+node_modules
+dist
+gui
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+venv*
+.vscode
+.pytest_cache
+__pycache__
+src/__pycache__
+.eggs
+yarn-error.log
+yarn.lock
